// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": true,
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "acceptedPrices": Object {},
  "connection": false,
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer status 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptedPrices",
    ],
  },
  "connection": true,
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
}
`;
